# django-startproject

./: .env-dist  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  conftest.py-tpl  fly.toml-tpl  justfile  pyproject.toml  pytest.ini  requirements.in  setup.cfg  supervisord.conf
.github/workflows/: main.yml
apps/core/: admin.py  auth.py  models.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py
apps/core/tests/: conftest.py  test_users.py
config/: settings.py-tpl  urls.py-tpl
